# voyagis

./: .gitignore  README.md  pyproject.toml
examples/lilianweng-agent/documents/: lilianweng-agent.md
examples/lilianweng-agent/scripts/: base_rag.py  query_translation_rag.py
examples/stables/: quivr00.py
rags/: rags.py
rags/core/: base.py  config.py  query_translation.py  rags.py
rags/core/rag/: prompts.py  query_translation.py
voyagis/: temp.py
voyagis/core/: base.py  query_translation.py
voyagis/core/rag/: base.py  logging.py  query_translation.py
